# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff_tree.py  gendiff_engine.py  parser.py  stylish.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: json_diff.json
tests/fixtures/yaml/: .file1.yml.swp  file4.yaml
