[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgeny Samoylov <samoyl@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ">=3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
